fix: add links on mobile menu add space between unique card

--- a/src/app/layouts/card-layout/card-layout.component.scss
+++ b/src/app/layouts/card-layout/card-layout.component.scss
@@ -10,6 +10,7 @@ mat-card {
   overflow: hidden;
   transition: box-shadow 0.3s ease;
   background: white;
+  justify-self: center;
 }
 
 mat-card:hover {
