--- a/src/app/views/launches/launches.component.scss
+++ b/src/app/views/launches/launches.component.scss
@@ -41,12 +41,14 @@ h2 {
   display: flex;
   justify-content: center;
   height: 100vh;
+  padding: 0 16px;
 }
 
 .launches-unique-card {
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
 }
 
 @media screen and (min-width: 600px) {
